<resources>
    <string name="app_name">MyBook</string>
    <string name="hello">Hello!</string>
    <string name="welText">Welcome to MyBook</string>
    <string name="des">Description</string>
    <string name="title">Title</string>
    <string name="btnsave">Save</string>
    <string name="addNote">Add Note</string>
    <string name="access_library">Access Library</string>
    <string name="see_notes">See Notes</string>
    <string name="bdebook">BD-e-Book</string>
    <string name="btprev">prev</string>
    <string name="btnext">next</string>
    <string name="btzoomin">+</string>
    <string name="btzoomout">-</string>
</resources>
