<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/hello"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/weltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welText"
            android:textSize="30sp"
            android:layout_below="@+id/hello"
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/library"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/weltext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/access_library"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/note"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/library"
            android:text="@string/see_notes"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/bdebook"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/note"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/bdebook"
            android:textSize="20dp"
            />

    </RelativeLayout>



</ScrollView>