<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity">

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdf_viewer"
        android:layout_width="match_parent"
        android:layout_height="680dp">


    </com.github.barteksc.pdfviewer.PDFView>

    <Button
        android:id="@+id/buttonPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btprev"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="8dp"
        android:onClick="prevPage"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnext"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/buttonPrev"
        android:layout_toRightOf="@id/buttonPrev"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="nextPage"/>

    <Button
        android:id="@+id/buttonZoomIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btzoomin"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/buttonNext"
        android:layout_toRightOf="@id/buttonNext"
        android:onClick="zoonIn"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <Button
        android:id="@+id/buttonZoomOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btzoomout"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/buttonZoomIn"
        android:layout_toRightOf="@id/buttonZoomIn"
        android:onClick="zoomOut"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="8dp" />

</RelativeLayout>